# fluxgym-coach

./: .coverage  .gitignore  CHANGELOG.fr.md  CHANGELOG.md  DECISIONS.md  ETAT_DU_PROJET.md  PROJECT_STATUS.md  PROJET.md  PROTOCOLE.md  PROTOCOLE_DEBUT.md  PROTOCOLE_FIN.md  PROTOCOLE_RACINE.fr.md  PROTOCOLE_RACINE.md  README.en.md  README.fr.md  README.md  RELEASE_v0.1.0.fr.md  RELEASE_v0.2.0.fr.md  TODO.md  Workflow.md  interface.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-tests.yml
benchmark_results/output_without_cache_1/metadata/: 69f41f1ef05c56a38d83d31772168adc905f87ac5123299ff053e9040839905f_metadata.json
docs/: image_enhancement.md
docs/benchmarks/output_with_cache_first_0/: image_0002_description.txt
docs/releases/: RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.2.1.en.md  RELEASE_v0.2.1.md
fluxgym_coach/: __init__.py  batch_processor.py  cli.py  description.py  description_generator.py  image_cache.py  image_enhancement.py  image_enhancement.py.bak  legacy_compat.py  metadata.py  processor.py
fluxgym_coach/utils/: __init__.py  config.py  validators.py
scripts/: benchmark_cache.py
tests/: __init__.py  benchmark_cache.py  conftest.py  test_batch_processing.py  test_batch_processor.py  test_cli.py  test_cli_extra.py  test_config.py  test_description.py  test_image_cache.py  test_image_enhancement.py  test_metadata.py  test_processor.py  test_setup_cache.py  test_validators.py
tests/integration/: __init__.py  test_end_to_end.py  test_stable_diffusion_api.py
(+4 files in other folders)
